# BabaIsAPI

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
resources/definitions/: NounType.def  PropertyType.def
resources/maps/: baba_is_you.txt  level00.json
src/: CMakeLists.txt  main.cpp
src/api/: GameController.cpp  GameController.h
src/api/command/: Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  LevelCommand.cpp  LevelCommand.h  StatusCommand.cpp  StatusCommand.h
src/api/dto/: StatusDTO.cpp  StatusDTO.h
src/game/: Game.cpp  Game.h
src/game/engine/: GameManager.cpp  GameManager.h  GraphicManager.cpp  GraphicManager.h  LevelLoader.cpp  LevelLoader.h  SpriteManager.cpp  SpriteManager.h  WindowedGameManager.cpp  WindowedGameManager.h  game_manager.ixx  graphic_manager.ixx  level_loader.ixx  sprite_manager.ixx
src/game/engine/event/: ApiEventManager.cpp  ApiEventManager.h  EventManager.cpp  EventManager.h  KeyboardEventManager.cpp  KeyboardEventManager.h  api_event_manager.ixx  event_manager.ixx  keyboard_event_manager.ixx
src/game/logic/: GameLogic.cpp  GameLogic.h
src/game/logic/level/: Level.cpp  Level.h
src/game/logic/level/block/: Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  NounBlock.cpp  NounBlock.h  PropertyBlock.cpp  PropertyBlock.h  TextBlock.cpp  TextBlock.h  VerbBlock.cpp  VerbBlock.h
src/game/logic/level/block/concept/: BlockConcept.cpp  BlockConcept.h  ConceptController.cpp  ConceptController.h
src/game/logic/property/: DefeatProperty.cpp  DefeatProperty.h  HotProperty.cpp  HotProperty.h  Property.cpp  Property.h  PropertyController.cpp  PropertyController.h  PushProperty.cpp  PushProperty.h  ShutProperty.cpp  ShutProperty.h  SinkProperty.cpp  SinkProperty.h  StopProperty.cpp  StopProperty.h  WinProperty.cpp  WinProperty.h  YouProperty.cpp  YouProperty.h
src/game/logic/rule/: NounRule.cpp  NounRule.h  PropertyRule.cpp  PropertyRule.h  Rule.cpp  Rule.h  RuleInterpreter.cpp  RuleInterpreter.h  RuleParser.cpp  RuleParser.h
tests/: CMakeLists.txt  TestExample.cpp
tests/game/logic/level/block/: TestBlock.cpp
